Responsividade do navbar

--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,6 +1,6 @@
 
 .header {
-    background-color: #333;
+    background-color: #2E7D32;
     color: white;
     padding: 20px;
     text-align: center;
