--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -26,3 +26,28 @@
     text-decoration: underline;
   }
   
+  .search-form {
+    
+    align-items: center;
+  }
+
+  .search-input {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px 0 0 4px;
+    outline: none;
+  }
+
+  .search-button {
+    padding: 0.5rem;
+    background-color: #81C784; 
+    border: none;
+    border-radius: 0 4px 4px 0;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .search-button:hover {
+    background-color: #66BB6A; 
+  }
