--- a/src/style/MainContent.css
+++ b/src/style/MainContent.css
@@ -17,3 +17,9 @@
     color: #555;
   }
   
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
