Criado Meus dados

--- a/src/style/MainContent.css
+++ b/src/style/MainContent.css
@@ -23,3 +23,10 @@
     gap: 20px;
     justify-content: center;
   }
+
+
+  .main-content-dados {
+    padding-left: 40px;
+    background-color: #f9f9f9;
+    text-align: center;
+  }
