--- a/src/style/MainContentDados.css
+++ b/src/style/MainContentDados.css
@@ -1,30 +1,29 @@
-/* Estilização principal do container */
+
 .main-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 70vh; /* Faz o container ocupar toda a altura da tela */
-  text-align: left; /* Centraliza o texto dentro do container */
+  height: 70vh; 
+  text-align: left; 
   padding: 20px;
-  background-color: #f5f5f5; /* Opcional: cor de fundo */
+  background-color: #f5f5f5; 
 }
 
-/* Estilização adicional para o título */
+
 .main-content h1 {
   margin-bottom: 20px;
   font-size: 2rem;
   color: #333;
 }
 
-/* Estilização para o componente ConstructionDetails */
 .construction-details {
-  background-color: #fff; /* Cor de fundo do componente */
+  background-color: #fff; 
   padding: 20px;
-  border-radius: 8px; /* Bordas arredondadas */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para destaque */
-  max-width: 600px; /* Largura máxima */
-  width: 100%; /* Garante que ocupe toda a largura disponível */
+  border-radius: 8px; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 600px; 
+  width: 100%; 
 }
 
 
